tests/parser/invalid/struct_without_name.src
struct {  // Ошибка: отсутствует имя структуры
    int x;
    int y;
};